fallback-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fib-fallback-service
spec:
  selector:
    app: fib-fallback
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
