proper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fib-proper-service
spec:
  selector:
    app: fib-proper
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
